fixes after PR comments 2